[project]
name = "rsa_sway"
version = "0.1.0"
authors = ["Elena Fuentes Bongenaar"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = "0.14"
fuels-abigen-macro = "0.14"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
